@@ -1,6 +1,8 @@
 2013-03-25	Hannes von Haugwitz <hannes@vonhaugwitz.com>
 	* include/rgxg/number.h, src/range.h:
 	  - added missing 'extern' keyword to function declarations
+	* include/rgxg/utils.h, src/escape.h, src/alternation.h:
+	  - added missing parameter names to function declarations
 
 2013-03-24	Hannes von Haugwitz <hannes@vonhaugwitz.com>
 	* +include/rgxg/utils.h, +lib/utils.c,
